--- a/index.html
+++ b/index.html
@@ -1,71 +1,218 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="ja">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Rtdtools by nanatasu</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <title>ロードラツール</title>
+
+    <!-- Bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/theme.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Rtdtools</h1>
-        <p></p>
 
-        <p class="view"><a href="https://github.com/nanatasu/rtdtools">View the Project on GitHub <small>nanatasu/rtdtools</small></a></p>
+  <body role="document">
+
+    <!-- navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">"Road to Dragon" tools</a>
+        </div>
+      </div>
+    </nav><!-- //navbar -->
+
+    <!-- main -->
+    <div class="container" role="main">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">経験値計算くん</h3>
+        </div>
+        <div class="panel-body">
+          <form role="form">
+            <div class="form-group row">
+              <div class="col-xs-6">
+                <select class="form-control expsel" name="expunit" id="expunit">
+                <option>ユニット系統</option>
+                <option value="0">主人公（No.01～12）</option>
+                <option value="1">洋名1（No.13～52）</option>
+                <option value="2">洋名2（No.53～92）</option>
+                <option value="3">和名（No.93～132）</option>
+                <option value="4">勇者/英雄/銃士/賢者</option>
+                <option value="5">亡霊</option>
+                <option value="6">遺跡/孤高/海竜/帝国</option>
+                <option value="7">ひらがな亜人</option>
+                <option value="8">王</option>
+                <option value="9">神王将</option>
+                </select>
+              </div>
+              <div class="col-xs-6">
+                <select class="form-control expsel" name="exprarity" id="exprarity">
+                <option>レアリティ</option>
+                <option value="0">★3</option>
+                <option value="1">★4</option>
+                <option value="2">★5</option>
+                <option value="3">★6</option>
+                </select>
+              </div>
+              <div class="col-xs-12">
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox" id="chkinput"> 経験値を直接入力
+                  </label>
+                </div>
+                <input type="tel" class="form-control expcalc" name="expneed" id="expneed" placeholder="必要経験値" readonly>
+              </div>
+            </div>
+            <div class="form-group">
+              <input type="tel" class="form-control expcalc" name="expcurrent" id="expcurrent" placeholder="現在の経験値を入力">
+            </div>
+            <div class="form-group">
+              <p class="text-center"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></p>
+            </div>
+            <div class="form-group row">
+              <div class="col-xs-6">
+                <div class="input-group">
+                  <div class="input-group-addon">あと</div>
+                    <input type="text" class="form-control" name="expresult" id="expresult" readonly>
+                </div>
+              </div>
+              <div class="col-xs-6">
+                <div class="input-group">
+                  <div class="input-group-addon">大成功</div>
+                    <input type="text" class="form-control" name="expresultsp" id="expresultsp" readonly>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div><!-- //panel -->
+      
+      <div class="panel panel-warning">
+        <div class="panel-heading">
+          <h3 class="panel-title">進化用リーシャメモ</h3>
+        </div>
+        <div class="panel-body">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>レベル</th>
+                <th>進化pt</th>
+                <th>経験値</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Lv.23</td>
+                <td>205pt</td>
+                <td>143,000</td>
+              </tr>
+              <tr>
+                <td>Lv.30</td>
+                <td>255pt</td>
+                <td>295,000</td>
+              </tr>
+              <tr>
+                <td>Lv.37</td>
+                <td>304pt</td>
+                <td>548,000</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
 
 
-        <ul>
-          <li><a href="https://github.com/nanatasu/rtdtools/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nanatasu/rtdtools/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/nanatasu/rtdtools">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">参考リンク</h3>
+        </div>
+        <div class="panel-body">
+          <ul>
+            <li><a href="http://rtd.rtwiki.net/index.php?%BE%AE%A5%CD%A5%BF#d620b848" target="_blank">ユニットの系統による最大経験値・進化ptなど</a></li>
+          </ul>
+        </div>
+      </div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+    </div><!-- //main -->
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+    <!-- footer -->
+    <footer class="footer">
+      <p class="pull-right">Author:<a href="https://twitter.com/nanatasu/" rel="author">@nanatasu</a></p>
+      <p>Ver5.0.0</p>
+    </footer>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/nanatasu">nanatasu</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
     
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+    <!-- ↓自分用 -->
+    <script type="text/javascript">
+    jQuery(function($){
+
+    //Unit種類別の最大経験値（★3,★4,★5,★6）
+    var unitExpArray = [
+      [17391, 445671, 2567061, 4465125], // 主人公（No.01～12）
+      ["-", 1442792, "-", "-"],          // 洋名1（No.13～52）
+      [163320, 2753885, "-", "-"],       // 洋名2（No.53～92）
+      [175883, 521469, 2901759, "-"],    // 和名（No.93～132）
+      ["-", 458404, 4241033, 4210617],   // 勇者/英雄/銃士/賢者
+      ["-", "-", "-", "-"],              // 亡霊
+      [138194, 815118, 4464247, "-"],    // 遺跡/孤高/海竜/帝国
+      ["-", "-", 7919930, "-"],          // ひらがな亜人
+      ["-", "-", 1253087, 4465126],      // 王
+      ["-", 148226, 3114574, 2404298],   // 神王将
+    ];
+
+    //チェックボックスの処理
+    $('#chkinput').on('change',function(){
+       var chk = $(this).prop('checked');
+       obj = $('#expneed');
+       obj2 = $('.expsel');
+       (chk) ? obj.prop('readonly',false).val("") : obj.prop('readonly',true) ;
+       (chk) ? obj2.prop('disabled',true) : obj2.prop('disabled',false) ;
+    });
+
+    //プルダウン選択時の処理
+    $(".expsel").change(function(){
+      var expUnit = $("#expunit").val();
+      var expRarity = $("#exprarity").val();
+      $("#expneed").val("");
+        var expResult = unitExpArray[expUnit][expRarity];
+      $("#expneed").val(expResult).trigger('change');
+    });
+
+    //経験値エリア変更時の処理
+    $(".expcalc").change(function(){
+
+    var expNeed = $("#expneed").val();
+    var expCurrent = $("#expcurrent").val();
+
+    //表示初期化
+    $("#expresult").val("");
+    $("#expresultsp").val("");
+
+    //expCurrentを数値に変換
+    expCurrent = parseInt(expCurrent, 10);
+    expNeed = parseInt(expNeed, 10);
+
+    var chk = $.isNumeric(expCurrent);
+    var chk2 = $.isNumeric(expNeed);
+    if (chk && chk2){
+      $("#expresult").val(expNeed - expCurrent);
+      $("#expresultsp").val(Math.ceil((expNeed - expCurrent)/1.5));
+    };
+    });
+    });
+    </script>
+    <!-- ↑自分用 -->
   </body>
 </html>
