--- a/index.html
+++ b/index.html
@@ -91,7 +91,39 @@
           </form>
         </div>
       </div><!-- //panel -->
-      
+
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">よりしろ経験値</h3>
+        </div>
+        <div class="panel-body">
+          <table class="table table-striped">
+            <tbody>
+              <tr>
+                <th>色より</th>
+                <td>5,000</td>
+              </tr>
+              <tr>
+                <th>空より</th>
+                <td>10,000</td>
+              </tr>
+              <tr>
+                <th>上より</th>
+                <td>30,000</td>
+              </tr>
+              <tr>
+                <th>悪より　（x1.5）</th>
+                <td>20,000</td>
+              </tr>
+              <tr>
+                <th>超悪より（x3）</th>
+                <td>20,000</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
       <div class="panel panel-warning">
         <div class="panel-heading">
           <h3 class="panel-title">進化用リーシャメモ</h3>
