--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <div class="col-xs-12">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" id="chkinput"> 経験値を直接入力
+                    <input type="checkbox" id="chkinput"> 必要経験値を直接入力
                   </label>
                 </div>
                 <input type="tel" class="form-control expcalc" name="expneed" id="expneed" placeholder="必要経験値" readonly>
