--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container" role="main">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">最大レベルまでの不足経験値</h3>
+          <h3 class="panel-title">最大レベルまでの不足経験値計算</h3>
         </div>
         <div class="panel-body">
           <form role="form">
