--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <h3 class="panel-title">進化用ユニット経験値</h3>
         </div>
         <div class="panel-body">
-          <h4>［攻略王］リーシャ</h4>
+          <h4>［攻略王］リーシャ<small>木曜日イベドロップ</small></h4>
           <table class="table table-striped">
             <thead>
               <tr>
