--- a/index.html
+++ b/index.html
@@ -148,11 +148,12 @@
         </div>
       </div>
 
-      <div class="panel panel-warning">
+     <div class="panel panel-warning">
         <div class="panel-heading">
-          <h3 class="panel-title">進化用リーシャメモ</h3>
+          <h3 class="panel-title">進化用ユニット経験値</h3>
         </div>
         <div class="panel-body">
+          <h4>［攻略王］リーシャ<small>木曜日イベドロップ</small></h4>
           <table class="table table-striped">
             <thead>
               <tr>
@@ -179,9 +180,26 @@
               </tr>
             </tbody>
           </table>
+          <h4>遺跡ユニット</h4>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>レベル</th>
+                <th>進化pt</th>
+                <th>経験値</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Lv.23</td>
+                <td>205pt</td>
+                <td>120,000</td>
+              </tr>
+              <tr>
+            </tbody>
+          </table>
         </div>
       </div>
-
 
       <div class="panel panel-info">
         <div class="panel-heading">
