--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/theme.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -20,7 +21,7 @@
   <body role="document">
 
     <!-- navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">"Road to Dragon" tools</a>
@@ -33,92 +34,79 @@
     <!-- main -->
     <div class="container" role="main">
 
-<div id="myModal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">使い方</h4>
-            </div>
-            <div class="modal-body">
-<ol>
-<li>緑の項目に入力すると、不足経験値が表示されます</li>
-<li>「経験値を直接入力」にチェックを入れれば、手入力もできます</li>
-<li>大成功の場合は値を1.5で割ってるだけです</li>
-</ol>
+<div role="tabpanel">
 
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab"><i class="fa fa-calculator"></i> 不足経験値計算</a></li>
+    <li role="presentation"><a href="#sinka" aria-controls="sinka" role="tab" data-toggle="tab"><i class="fa fa-pencil"></i> 進化用ユニットメモ</a></li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <!-- tab1 -->
+    <div role="tabpanel" class="tab-pane active" id="home">
+
+      <form role="form">
+        <div class="form-group row">
+          <div class="col-xs-7">
+            <select class="form-control expsel" name="expunit" id="expunit">
+            <option>ユニット系統</option>
+            <option value="0">主人公（No.01～12）</option>
+            <option value="1">洋名1（No.13～52）</option>
+            <option value="2">洋名2（No.53～92）</option>
+            <option value="3">和名（No.93～132）</option>
+            <option value="4">勇者/英雄/銃士/賢者</option>
+            <option value="5">亡霊</option>
+            <option value="6">遺跡/孤高/海竜/帝国</option>
+            <option value="7">ひらがな亜人</option>
+            <option value="8">王</option>
+            <option value="9">神王将</option>
+            </select>
+          </div>
+          <div class="col-xs-5">
+            <select class="form-control expsel" name="exprarity" id="exprarity">
+            <option>レア度</option>
+            <option value="0">★3</option>
+            <option value="1">★4</option>
+            <option value="2">★5</option>
+            <option value="3">★6</option>
+            </select>
+          </div>
+          <div class="col-xs-12">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" id="chkinput"> 経験値を直接入力
+              </label>
             </div>
+            <input type="tel" class="form-control expcalc" name="expneed" id="expneed" placeholder="必要経験値" readonly>
+          </div>
         </div>
-    </div>
-</div>
+        <div class="form-group">
+          <input type="tel" class="form-control expcalc" name="expcurrent" id="expcurrent" placeholder="現在の経験値を入力">
+        </div>
+        <div class="form-group">
+          <p class="text-center"><i class="fa fa-chevron-down"></i></p>
+        </div>
+          <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-addon">不足経験値</div>
+                <input type="text" class="form-control" name="expresult" id="expresult" readonly>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-addon">大成功だと</div>
+                <input type="text" class="form-control" name="expresultsp" id="expresultsp" readonly>
+            </div>
+          </div>
+      </form>
 
-      <div class="panel panel-default">
+      <hr>
+
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h3 class="panel-title">最大レベルまでの不足経験値  <span class="glyphicon glyphicon-question-sign" aria-hidden="true" data-toggle="modal" data-target="#myModal"></span></h3>
-  
-
-        </div>
-        <div class="panel-body">
-          <form role="form">
-            <div class="form-group row">
-              <div class="col-xs-7">
-                <select class="form-control expsel" name="expunit" id="expunit">
-                <option>ユニット系統</option>
-                <option value="0">主人公（No.01～12）</option>
-                <option value="1">洋名1（No.13～52）</option>
-                <option value="2">洋名2（No.53～92）</option>
-                <option value="3">和名（No.93～132）</option>
-                <option value="4">勇者/英雄/銃士/賢者</option>
-                <option value="5">亡霊</option>
-                <option value="6">遺跡/孤高/海竜/帝国</option>
-                <option value="7">ひらがな亜人</option>
-                <option value="8">王</option>
-                <option value="9">神王将</option>
-                </select>
-              </div>
-              <div class="col-xs-5">
-                <select class="form-control expsel" name="exprarity" id="exprarity">
-                <option>レア度</option>
-                <option value="0">★3</option>
-                <option value="1">★4</option>
-                <option value="2">★5</option>
-                <option value="3">★6</option>
-                </select>
-              </div>
-              <div class="col-xs-12">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" id="chkinput"> 経験値を直接入力
-                  </label>
-                </div>
-                <input type="tel" class="form-control expcalc" name="expneed" id="expneed" placeholder="必要経験値" readonly>
-              </div>
-            </div>
-            <div class="form-group">
-              <input type="tel" class="form-control expcalc" name="expcurrent" id="expcurrent" placeholder="現在の経験値を入力">
-            </div>
-            <div class="form-group">
-              <p class="text-center"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></p>
-            </div>
-              <div class="form-group">
-                <div class="input-group">
-                  <div class="input-group-addon">不足経験値</div>
-                    <input type="text" class="form-control" name="expresult" id="expresult" readonly>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="input-group">
-                  <div class="input-group-addon">大成功だと</div>
-                    <input type="text" class="form-control" name="expresultsp" id="expresultsp" readonly>
-                </div>
-              </div>
-          </form>
-        </div>
-      </div><!-- //panel -->
-
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">よりしろ経験値メモ</h3>
+          <h3 class="panel-title">よりしろ経験値</h3>
         </div>
         <div class="panel-body">
           <table class="table table-striped">
@@ -148,13 +136,27 @@
         </div>
       </div>
 
-     <div class="panel panel-warning">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h3 class="panel-title">進化用ユニット経験値</h3>
+          <h3 class="panel-title">参考リンク</h3>
         </div>
         <div class="panel-body">
-          <h4>［攻略王］リーシャ</h4>
-          <p>木曜日イベドロップ</p>
+          <ul>
+            <li><a href="http://rtd.rtwiki.net/index.php?%BE%AE%A5%CD%A5%BF#d620b848" target="_blank">ユニットの系統による最大経験値・進化ptなど</a></li>
+          </ul>
+        </div>
+      </div>
+
+
+    </div><!-- //tab1 -->
+
+    <!-- tab2 -->
+    <div role="tabpanel" class="tab-pane" id="sinka">
+      <ul class="nav nav-pills">
+        <li role="presentation"><a href="#tab2-1"><i class="fa fa-chevron-down"></i> リーシャ</a></li>
+        <li role="presentation"><a href="#tab2-2"><i class="fa fa-chevron-down"></i> 遺跡・孤高ユニット</a></li>
+      </ul>
+          <h2 id="tab2-1"><i class="fa fa-ellipsis-v"></i> ［攻略王］リーシャ</h2>
           <table class="table table-striped">
             <thead>
               <tr>
@@ -181,7 +183,33 @@
               </tr>
             </tbody>
           </table>
-          <h4>遺跡ユニット</h4>
+
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">ドロップ情報</h3>
+        </div>
+        <div class="panel-body">
+          <p>木曜日ファミ通Appコラボ</p>
+          <h3>真書の使途・超級　<a href="http://livedoor.blogimg.jp/iphonegamer/imgs/7/2/724d385d.jpg" target="_blank"><i class="fa fa-arrow-circle-o-right"></i> map</a></h3>
+          <dl>
+            <dt>金スライム　（60％）</dt>
+            <dd>+3（20）、-3（20）、0（3）、0（1）</dd>
+            <dt>銀スライム　（20％）</dt>
+            <dd>-3（24）、+3（9）</dd>
+          </dl>
+          <h3>真書の使途・激烈　<a href="http://livedoor.blogimg.jp/iphonegamer/imgs/e/b/eb91ba0e.jpg" target="_blank"><i class="fa fa-arrow-circle-o-right"></i> map</a></h3>
+          <dl>
+            <dt>金スライム　（60％）</dt>
+            <dd>+2（24）、+1（12）</dd>
+            <dt>銀スライム　（20％）</dt>
+            <dd>+2（24）、+1（12）</dd>
+          </dl>
+        </div>
+      </div>
+
+          <hr>
+
+          <h2 id="tab2-2"><i class="fa fa-ellipsis-v"></i> 遺跡・孤高ユニット</h2>
           <table class="table table-striped">
             <thead>
               <tr>
@@ -199,19 +227,62 @@
               <tr>
             </tbody>
           </table>
-        </div>
-      </div>
 
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h3 class="panel-title">参考リンク</h3>
+          <h3 class="panel-title">ドロップ情報</h3>
         </div>
         <div class="panel-body">
-          <ul>
-            <li><a href="http://rtd.rtwiki.net/index.php?%BE%AE%A5%CD%A5%BF#d620b848" target="_blank">ユニットの系統による最大経験値・進化ptなど</a></li>
-          </ul>
+          <dl>
+            <dt>アリシア（火槍）</dt>
+            <dd>エルカ・トア火山「朱き獄炎の主竜」 
+              <i class="fa fa-thumbs-o-up" data-toggle="tooltip" data-placement="top" title="おすすめ"></i>
+              <i class="fa fa-meh-o" data-toggle="tooltip" data-placement="top" title="助っ人固定"></i>
+              <i class="fa fa-fire" data-toggle="tooltip" data-placement="top" title="火のみ"></i>
+            </dd>
+            <dt>ニコラ（水杖）</dt>
+            <dd>レオニード港「水平線の彼方」
+              <i class="fa fa-tint" data-toggle="tooltip" data-placement="top" title="水のみ"></i>
+            </dd>
+            <dt>クロマ（闇剣）</dt>
+            <dd>ヴァスターク砦「不穏な影」
+              <i class="fa fa-cloud" data-toggle="tooltip" data-placement="top" title="闇のみ"></i>
+            </dd>
+            <dt>カイト（光弓）</dt>
+            <dd>エルアドル村「森の抜け道」 
+              <i class="fa fa-meh-o" data-toggle="tooltip" data-placement="top" title="助っ人固定"></i>
+            </dd>
+          </dl>
+          <dl>
+            <dt>プリティ（火杖）</dt>
+            <dd>アルニア盆地「異国のドラゴン」
+              <i class="fa fa-meh-o" data-toggle="tooltip" data-placement="top" title="助っ人固定"></i>
+              <i class="fa fa-fire" data-toggle="tooltip" data-placement="top" title="火のみ"></i>
+            </dd>
+            <dt>メリル（水槍）</dt>
+            <dd>シエスタ港「海から来た怪物」</dd>
+            <dt>レオ（闇弓）</dt>
+            <dd>ガイザック坑道「闇の先の光」「消えぬ意思」
+              <i class="fa fa-meh-o" data-toggle="tooltip" data-placement="top" title="助っ人固定"></i>
+            </dd>
+            <dt>キルト（光剣）</dt>
+            <dd>ヤープ村「襲い来る獣たち」
+              <i class="fa fa-meh-o" data-toggle="tooltip" data-placement="top" title="助っ人固定"></i>
+              <i class="fa fa-sun-o" data-toggle="tooltip" data-placement="top" title="光のみ"></i>
+</dd>
+          </dl>
         </div>
       </div>
+
+
+    </div><!-- //tab2 -->
+  </div><!-- //Tab panes -->
+
+</div>
+
+
+
+
 
     </div><!-- //main -->
 
@@ -230,6 +301,9 @@
     <!-- ↓自分用 -->
     <script type="text/javascript">
     jQuery(function($){
+
+    //bootstrapのツールチップ表示用
+    $('[data-toggle="tooltip"]').tooltip();
 
     //Unit種類別の最大経験値（★3,★4,★5,★6）
     var unitExpArray = [
