--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab"><i class="fa fa-calculator"></i> 不足経験値計算</a></li>
-    <li role="presentation"><a href="#sinka" aria-controls="sinka" role="tab" data-toggle="tab"><i class="fa fa-pencil"></i> 進化用ユニットメモ</a></li>
+    <li role="presentation"><a href="#sinka" aria-controls="sinka" role="tab" data-toggle="tab"><i class="fa fa-pencil"></i> 進化用ユニット</a></li>
   </ul>
 
   <!-- Tab panes -->
