--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     <!-- tab2 -->
     <div role="tabpanel" class="tab-pane" id="sinka">
       <ul class="nav nav-pills">
-        <li><a href="#tab2-1"><i class="fa fa-chevron-down"></i> リーシャ</a></li>
-        <li><a href="#tab2-2"><i class="fa fa-chevron-down"></i> 遺跡・孤高ユニット</a></li>
+        <li role="presentation"><a href="#tab2-1"><i class="fa fa-chevron-down"></i> リーシャ</a></li>
+        <li role="presentation"><a href="#tab2-2"><i class="fa fa-chevron-down"></i> 遺跡・孤高ユニット</a></li>
       </ul>
           <h2 id="tab2-1"><i class="fa fa-ellipsis-v"></i> ［攻略王］リーシャ</h2>
           <table class="table table-striped">
