--- a/index.html
+++ b/index.html
@@ -191,18 +191,18 @@
         <div class="panel-body">
           <p>木曜日ファミ通Appコラボ</p>
           <h3>真書の使途・超級　<a href="http://livedoor.blogimg.jp/iphonegamer/imgs/7/2/724d385d.jpg" target="_blank"><i class="fa fa-arrow-circle-o-right"></i> map</a></h3>
-          <dl>
-            <dt>金スライム　（60％）</dt>
-            <dd>+3（20）、-3（20）、0（3）、0（1）</dd>
-            <dt>銀スライム　（20％）</dt>
-            <dd>-3（24）、+3（9）</dd>
+          <dl class="dl-horizontal">
+            <dt>銀スライム（100%）</dt>
+            <dd>-3（24）, +3（9）</dd>
+            <dt>金スライム（20%）</dt>
+            <dd>+3（20）, -3（20）, 0（3）, 0（1）</dd>
           </dl>
           <h3>真書の使途・激烈　<a href="http://livedoor.blogimg.jp/iphonegamer/imgs/e/b/eb91ba0e.jpg" target="_blank"><i class="fa fa-arrow-circle-o-right"></i> map</a></h3>
-          <dl>
-            <dt>金スライム　（60％）</dt>
-            <dd>+2（24）、+1（12）</dd>
-            <dt>銀スライム　（20％）</dt>
-            <dd>+2（24）、+1（12）</dd>
+          <dl class="dl-horizontal">
+            <dt>銀スライム（100%）</dt>
+            <dd>+2（24）, +1（12）</dd>
+            <dt>金スライム（30%）</dt>
+            <dd>+4（20）, -3（19）, +3（3）, -4（2）</dd>
           </dl>
         </div>
       </div>
@@ -233,7 +233,7 @@
           <h3 class="panel-title">ドロップ情報</h3>
         </div>
         <div class="panel-body">
-          <dl>
+          <dl class="dl-horizontal">
             <dt>アリシア（火槍）</dt>
             <dd>エルカ・トア火山「朱き獄炎の主竜」 
               <i class="fa fa-thumbs-o-up" data-toggle="tooltip" data-placement="top" title="おすすめ"></i>
@@ -253,7 +253,7 @@
               <i class="fa fa-meh-o" data-toggle="tooltip" data-placement="top" title="助っ人固定"></i>
             </dd>
           </dl>
-          <dl>
+          <dl class="dl-horizontal">
             <dt>プリティ（火杖）</dt>
             <dd>アルニア盆地「異国のドラゴン」
               <i class="fa fa-meh-o" data-toggle="tooltip" data-placement="top" title="助っ人固定"></i>
