--- a/index.html
+++ b/index.html
@@ -262,14 +262,11 @@
             <dt>メリル（水槍）</dt>
             <dd>シエスタ港「海から来た怪物」</dd>
             <dt>レオ（闇弓）</dt>
-            <dd>ガイザック坑道「闇の先の光」「消えぬ意思」
+            <dd>ガイザック坑道「消えぬ意思」
               <i class="fa fa-meh-o" data-toggle="tooltip" data-placement="top" title="助っ人固定"></i>
             </dd>
             <dt>キルト（光剣）</dt>
-            <dd>ヤープ村「襲い来る獣たち」
-              <i class="fa fa-meh-o" data-toggle="tooltip" data-placement="top" title="助っ人固定"></i>
-              <i class="fa fa-sun-o" data-toggle="tooltip" data-placement="top" title="光のみ"></i>
-</dd>
+            <dd>ヤープ村「灼け果てる村」</dd>
           </dl>
         </div>
       </div>
